﻿
Changes
=========

    **1.73**

        - Don't cancel oneshot modifier key when Key-Up event comes.

    **1.72**

        - Handle key events injected by other programs.

    **1.71**

        - Allow multiple pyauto.Hook instances, so that Keyhac can co-exist with applications which use pyauto.Hook.

        - Fixed the error which happens when a clipboard history item is removed in a state that the clipboard contains non-text object.

        - Moved to Python35 from Python34.

        - Stopped using cx_Freeze, and started to use own freezing system.

    **1.70**

        - Added english support.

        - Changed the name of application from "keyhac" to "Keyhac".

        - Changed the naming convention for Keymap methods which generate command. (command_MoveWindow -> MoveWindowCommand, etc)

    **1.64**

        - ビルドに Visual Studio 2015 を使うようにした。

        - Python33 から Python34 に移行

        - ckit.Window の代わりに ckit.TextWindow を使うようにした。(ckitの設計変更に追従)

        - デフォルト設定ファイルに、クリップボードのテキストの全角／半角を変換して貼りつける機能の例を追加。(To Half-Width, To Full-Width)

    **1.62**

        - デフォルト設定ファイルのクリップボード履歴の最大数が 1000 ではなく 10000 になっていたのを修正。

        - ドキュメントをリファレンスのツリー形式に統合。

        - マウスの水平ホイールの擬似的な操作をするためのコマンドを追加

            - command_MouseHorizontalWheel

    **1.61**

        - クリップボード履歴として保存するデータの最大合計サイズを keymap.clipboard_history.quota で設定できるようにした。

        - デフォルト設定ファイルに、クリップボードのテキストを変換して貼りつける機能の例を追加。(Quote,Indent,Unindent)

        - デフォルト設定ファイルに、クリップボードのテキストをデスクトップにファイルとして保存するコマンドの例を追加。

        - フックのなかで与えられた関数を実行するメソッド、Keymap.hookCall() を追加。

        - クリップボード履歴リストからの貼り付け処理に Keymap.hookCall() を使うようにして、キーが押しっぱなしになってしまう可能性があったのを修正。

        - テキストファイルを編集するメソッド、Keymap.editTextFile() を追加。

        - OS 起動直後など Keymap.getTopLevelWindow() が None を返すことがあり、command_MoveWindow_MonitorEdge でエラーが発生することがあったのを修正。

    **1.60**

        - Python27 から Python33 に移行。
